上传到自己的github

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<style type="text/css">
+			img {
+				width: 100%;
+				color: #F02D2D;
+			}
+		</style>
 	</head>
 
 	<body>
-		Hello Word
+		<h3>老公，老公，我爱你，就像老鼠爱大米。</h3>
+		<img src="logo.png" alt="" />
 	</body>
 
 </html>
